<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
android:padding="@dimen/activity_horizontal_margin"
android:orientation="vertical">

<TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:textColor="@android:color/white"
    android:textSize="26sp"
    android:paddingLeft="16dp"
    android:gravity="center_vertical"
    android:layout_height="100dp" />

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_margin="16dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="190dp"
            android:layout_height="260dp"
            tools:src="@drawable/placeholder_movie_details_image"
            android:scaleType="centerCrop"/>


        <TextView
            android:id="@+id/release_date"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/poster"
            android:layout_width="wrap_content"
            tools:text="@string/release"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/rating"
            android:layout_toRightOf="@id/poster"
            android:layout_below="@id/release_date"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:fontFamily="monospace"
            tools:text="@string/rating"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/running_time"
            android:layout_toRightOf="@id/poster"
            android:layout_below="@id/rating"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:fontFamily="monospace"
            android:textStyle="italic|bold"
            tools:text="@string/running_time"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingRight="15dp"
            tools:text="@string/plot"
            android:textStyle="italic"
            android:layout_below="@id/poster"
            android:layout_marginTop="15dp"
            android:textSize="16dp" />

    </RelativeLayout>

</ScrollView>

</LinearLayout>